WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
193187
REGRESSION(
r239636
): ImageDecoder::setEncodedDataStatusChangeCallback() can be called on a null decoder
https://bugs.webkit.org/show_bug.cgi?id=193187
Summary
REGRESSION(r239636): ImageDecoder::setEncodedDataStatusChangeCallback() can b...
Zan Dobersek
Reported
2019-01-06 23:39:26 PST
REGRESSION(
r239636
): ImageDecoder::setEncodedDataStatusChangeCallback() can be called on a null decoder
Attachments
Patch
(1.83 KB, patch)
2019-01-06 23:40 PST
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zan Dobersek
Comment 1
2019-01-06 23:40:56 PST
Created
attachment 358481
[details]
Patch
Zan Dobersek
Comment 2
2019-01-07 02:40:07 PST
Comment on
attachment 358481
[details]
Patch Clearing flags on attachment: 358481 Committed
r239668
: <
https://trac.webkit.org/changeset/239668
>
Zan Dobersek
Comment 3
2019-01-07 02:40:11 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2019-01-07 02:42:34 PST
<
rdar://problem/47080686
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug