REGRESSION(r239636): ImageDecoder::setEncodedDataStatusChangeCallback() can be called on a null decoder https://bugs.webkit.org/show_bug.cgi?id=193187

Reviewed by Philippe Normand.

* platform/graphics/ImageSource.cpp:
(WebCore::ImageSource::ensureDecoderAvailable): Bail before calling the
setEncodedDataStatusChangeCallback() method when the returned
ImageDecoder object is null.


Canonical link: https://commits.webkit.org/207694@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239668 268f45cc-cd09-0410-ab3c-d52691b4dbfc